2003-09-20  Mark Kettenis  <kettenis@gnu.org>

	* Makefile.in (sparc-sol2-nat.o): Fix typo.

	* sparc-sol2-nat.c: Move include of "gregset.h" after
	<sys/procfs.h>.

2003-09-18  Mark Kettenis  <kettenis@gnu.org>

	* config/sparc/nm-sol2.h: New file.

	New SPARC target.
	* configure.tgt: Remove support for old SPARC targets.
	* configure.tgt: Remove support for old SPARC hosts.
	* Makefile.in: Remove support for old SPARC hosts and targets.
	(sparc-tdep.o): Update dependencies.
	(sparc-sol2-tdep.o, sparc-sol2-nat.o): New dependencies.
	* sparc-tdep.c, sparc-tdep.h: New implementation.
	* sparc-sol2-tdep.c, sparc-sol2-nat.c: New files.
	* config/sparc/sparc.mt: New files.
	* config/sparc/sol2.mt, config/sparc/sol2.mh: New files.
	* config/sparc/tm-sol2.h: New file.

2003-09-17  Jim Blandy  <jimb@redhat.com>

	* Makefile.in (dis_asm_h): Note that this #includes "bfd.h".

2003-09-17  Andrew Cagney  <cagney@redhat.com>

	* ppcnbsd-tdep.c (ppcnbsd_use_struct_convention): New function.
	(ppcnbsd_init_abi): Set "use_struct_convention" to
	"ppcnbsd_use_struct_convention".

2003-09-17  Mark Kettenis  <kettenis@gnu.org>

	* gdbarch.sh (DEPRECATED_REG_STRUCT_HAS_ADDR): Add comment.
	* gdbarch.h, gdbarch.c: Regenerate.
	(stabs_argument_has_addr): New architecture method.
	* arch-utils.h (default_stabs_argument_has_addr): New prototype.
	* arch-utils.c: Include "buildsym.h".
	(default_stabs_argument_has_addr): New function.
	* stabsread.c (define_symbol): Use stabs_argument_has_addr
	instead of DEPRECATED_REG_STRUCT_HAS_ADDR.

2003-09-17  Andrew Cagney  <cagney@redhat.com>

	* gdbarch.sh (DEPRECATED_NPC_REGNUM): Deprecate NPC_REGNUM.
	* gdbarch.h, gdbarch.c: Regenerate.
	* core-sol2.c, hppa-tdep.c, lynx-nat.c, procfs.c: Update.
	* regcache.c, remote-vxsparc.c, sparc-linux-nat.c: Update.
	* sparc-nat.c, sparc-tdep.c, sparc64-tdep.c: Update.
	* sparcnbsd-tdep.c: Update.
	
2003-09-17  Andrew Cagney  <cagney@redhat.com>
